2013-10-02  Ethan A Merritt  <merritt@u.washington.edu>

        * src/graphics.c (plot_steps plot_fsteps):  Replace 300 lines of ad hoc
	clipping with calls to draw_clip_line.

2013-10-01  Christoph Bersch <usenet@bersch.net>

	* src/plot2d.c (store_label):  Plots with labels should accept variable
	color both for the label text and for the associated point symbol.
        Bug #1281

2013-09-30  Ethan A Merritt  <merritt@u.washington.edu>

        * src/graphics.c (plot_bars):  Draw error bars using draw_clip_line
	rather than performing ad hoc clipping on the spot.
	Bug #1289

2013-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/save.c src/set.c src/stdfn.h src/unset.c:
	Consolidate axis range flags from two fields into a single field.

	* src/axis.c src/axis.h src/boundary.c src/gadgets.c src/gadgets.h
	src/graph3d.c src/graphics.c src/hidden3d.c src/misc.c src/plot2d.c
	src/plot3d.c src/pm3d.c src/save.c src/set.c src/show.c src/term_api.h
	src/term.c src/util3d.c src/color.c:

	Simplify the historical redundancy of color properties stored in struct
	lp_style_type by removing the TBOOLEAN use_palette. FALSE meant generate
	color from l_type; TRUE meant take color from t_colorspec pm3d_color.
	Now we always use the t_colorspec.  This means that l_type refers only
	to the dot/dash pattern, not color, so it becomes easier to map it to a
	user-visible property "dashtype" in the future.  It also has the side
	effect of creating a single decision point in apply_pm3dcolor() where
	[almost] all color commands are filtered against the current terminal 
	setting monochrome/color.  Before this, colors could slip erroneously
	into a "monochrome" plot.  Now we limit this to an explicit set of
	conditions, currently plots with rgbimage, rgb variable, or certain
	user-defined color palettes.  That 3rd category is a bit loose and may
	need to be more carefully defined.

	* src/axis.c src/axis.h src/set.c src/unset.c: